fix footer section bugs

--- a/Sass/Layouts/_Footer.scss
+++ b/Sass/Layouts/_Footer.scss
@@ -117,7 +117,7 @@
                 border: .1em solid black;
                 input {
                     font-size: $font-size-small;
-                    padding: .2em .2em .2em .2em ; 
+                    padding: .2em ; 
                     border-radius: .3em;
                     transition: all 0.3s ease-in;
                 }
